Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-12-07 Tim
 BUG: [ 1831512 ] Left Date column of CSV Report from "Generate Report.." menu
  Src: DirCmpReport.cpp

2007-11-21 Kimmo
 BUG: [ 1828930 ] Copy Left To Right with VCS
  Src: FileActionScript.cpp

2007-11-21 Tim
 BUG: [ 1817626 ] Menu item "Help->GPL" links to GPLv3
  Src: MainFrm.cpp

2007-11-11 Kimmo
 PATCH: [ 1811745 ] Do not merge ignored differences (with multi selection)
  Src: MergeDoc.cpp

2007-11-11 Takashi
 BUG: [ 1829572 ] Visible area rect on location bar shakes
  Src: MergeEditView.cpp

2007-11-05 Kimmo
 BUG: [ 1824734 ] "About..." box still has 2006 copyright. :-(
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2007-11-01 Tim
 BUG: [ 1807897 ] Button to small in Dutch version
  Src/Languages/Dutch: MergeDutch.rc

2007-10-24 Kimmo
 PATCH: [ 1816220 ] Bugfix: current position in LocationBar "invisible"
  Submitted by xurux at sourceforge.net
  Src: LocationView.cpp

2007-10-21 Kimmo
 BUG: [ 1815859 ] Still considers Vista as Longhorn
  Src: ConfigLog.cpp

2007-10-11 Kimmo
 PATCH: [ 1810171 ] MergeChineseTraditional.rc of 2.6.12 updated
  Submitted by Wei-cheng
  Src/Languages/ChineseTraditional: MergeChineseTraditional.rc
 PATCH: [ 1810539 ] ShellExtensionChineseTraditional.rc for 2.6.12 updated
  Submitted by Wei-cheng
  ShellExtension/Languages: ShellExtensionChineseTraditional.rc

2007-09-26 2.6.12 Stable Release (R4567)

 Fixed uninstalling bug (BUG: [ 1802179 ] Runtime error on uninstalling 2.6.10)
 Withdrawn 2.6.10 release due to above bug

2007-09-25 2.6.10 Stable Release (R4561)

2007-09-18 Kimmo
 BUG: [ 1791351 ] Go To Line Number does not change pane focus.
  Src: MergeEditView.cpp

2007-09-17 Takashi
 BUG: [ 1795814 ] When word wrap+scroll to first are on, it fails to scroll
  Src: MergeDoc.cpp

2007-09-15 Kimmo
 BUG: [ 1777054 ] Next difference sometimes not seen with Wrap Lines enabled